<resources>
    <string name="app_name">Assessment Projeto De Bloco</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="game">Game</string>
    <string name="catalog">Catálogo</string>
    <string name="chests">Baús</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apelido">Apelido</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
</resources>